add swagger and use applied prettier in the code
